--- a/packages/gatsby-theme-carbon/src/styles/_page.scss
+++ b/packages/gatsby-theme-carbon/src/styles/_page.scss
@@ -114,7 +114,9 @@ img {
   max-width: 100%;
 }
 
-.gatsby-resp-image-wrapper {
+.gatsby-resp-image-wrapper,
+img[src*='gif'],
+img[src*='svg'] {
   margin-bottom: $spacing-06;
 }
 
